--- a/package.json
+++ b/package.json
@@ -17,16 +17,30 @@
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
+    "@angular/material": "^2.0.0-beta.3",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@angular2-material/button": "^2.0.0-alpha.8-3",
+    "@angular2-material/card": "^2.0.0-alpha.8-3",
+    "@angular2-material/core": "^2.0.0-alpha.8-3",
+    "@angular2-material/icon": "^2.0.0-alpha.8-3",
+    "@angular2-material/input": "^2.0.0-alpha.8-3",
+    "@angular2-material/list": "^2.0.0-alpha.8-3",
+    "@angular2-material/radio": "^2.0.0-alpha.8-3",
+    "@angular2-material/slide-toggle": "^2.0.0-alpha.8-3",
+    "@angular2-material/toolbar": "^2.0.0-alpha.8-3",
+    "@angular2-material/tooltip": "^2.0.0-alpha.8-3",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.0.1",
+    "systemjs": "^0.20.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
+    "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.28.3",
